[gd_scene load_steps=17 format=2]

[ext_resource path="res://art/fonts/picotron.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/component/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_menu/script/dropdown_button.gd" type="Script" id=3]
[ext_resource path="res://main_menu/script/settings.gd" type="Script" id=4]
[ext_resource path="res://art/effects/rect_simple.png" type="Texture" id=5]
[ext_resource path="res://main_menu/script/toggle_button.gd" type="Script" id=6]
[ext_resource path="res://main_menu/script/setting_title.gd" type="Script" id=7]
[ext_resource path="res://main_menu/script/slider_button.gd" type="Script" id=8]
[ext_resource path="res://art/effects/rect_clear.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=21]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=29]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=28]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=31]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=32]
content_margin_left = 25.0

[sub_resource type="DynamicFont" id=33]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=30]
size = 8
font_data = ExtResource( 1 )

[node name="settings" type="Node2D"]
position = Vector2( 480, 0 )
script = ExtResource( 4 )

[node name="bg" type="Node2D" parent="."]
show_behind_parent = true

[node name="ColorRect" type="ColorRect" parent="bg"]
margin_top = 33.0
margin_right = 720.0
margin_bottom = 42.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect4" type="ColorRect" parent="bg"]
margin_top = 43.0
margin_right = 720.0
margin_bottom = 44.0

[node name="ColorRect5" type="ColorRect" parent="bg"]
margin_top = 32.0
margin_right = 720.0
margin_bottom = 33.0

[node name="ColorRect3" type="ColorRect" parent="bg"]
margin_top = 54.0
margin_right = 720.0
margin_bottom = 222.0
color = Color( 1, 1, 1, 0.572549 )

[node name="ColorRect2" type="ColorRect" parent="bg"]
margin_top = 55.0
margin_right = 720.0
margin_bottom = 221.0
color = Color( 0, 0, 0, 0.709804 )

[node name="text" type="Label" parent="bg"]
margin_left = 31.0
margin_top = 34.0
margin_right = 71.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 21 )
text = "Settings"

[node name="container" type="Control" parent="."]
margin_top = 55.0
margin_right = 556.0
margin_bottom = 221.0
rect_clip_content = true

[node name="name_pos" type="Position2D" parent="container"]
position = Vector2( 36, 0 )

[node name="value_pos" type="Position2D" parent="container"]
position = Vector2( 240, 0 )

[node name="scroll" type="NinePatchRect" parent="container"]
self_modulate = Color( 0.180392, 0.180392, 0.180392, 1 )
margin_left = 451.0
margin_top = 6.0
margin_right = 458.0
margin_bottom = 163.0
rect_clip_content = true
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="ColorRect" type="ColorRect" parent="container/scroll"]
show_behind_parent = true
margin_left = 2.0
margin_top = 2.0
margin_right = 9.0
margin_bottom = 31.0
focus_mode = 2
mouse_filter = 1

[node name="select_fx" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="back" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 31.0
margin_top = 232.0
margin_right = 71.0
margin_bottom = 247.0

[node name="text" type="Label" parent="back"]
margin_left = 8.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 21 )
text = "back"

[node name="slider" type="NinePatchRect" parent="."]
show_behind_parent = true
margin_left = 240.0
margin_top = 61.0
margin_right = 446.0
margin_bottom = 73.0
focus_mode = 2
mouse_filter = 1
region_rect = Rect2( 451, 165, 1, 3 )
script = ExtResource( 8 )

[node name="bg" type="ColorRect" parent="slider"]
show_behind_parent = true
margin_left = 63.0
margin_top = 4.0
margin_right = 183.0
margin_bottom = 10.0
mouse_filter = 2

[node name="bg2" type="ColorRect" parent="slider/bg"]
margin_left = 1.0
margin_top = 1.0
margin_right = 119.0
margin_bottom = 5.0
mouse_filter = 2
color = Color( 0.219608, 0.219608, 0.219608, 1 )

[node name="value" type="ColorRect" parent="slider/bg"]
margin_top = 1.0
margin_right = 92.0
margin_bottom = 5.0
mouse_filter = 2

[node name="Control" type="Control" parent="slider/bg/value"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = -5.0
margin_right = 40.0
margin_bottom = 35.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="slider/bg/value/Control"]
margin_top = 1.0
margin_right = 2.0
margin_bottom = 12.0
mouse_filter = 2

[node name="text" type="Label" parent="slider"]
show_behind_parent = true
margin_left = 180.0
margin_top = 4.0
margin_right = 202.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 29 )
text = "122"
align = 2

[node name="pop" type="AudioStreamPlayer" parent="slider"]

[node name="toggle" type="NinePatchRect" parent="."]
show_behind_parent = true
margin_left = 240.0
margin_top = 76.0
margin_right = 446.0
margin_bottom = 88.0
focus_mode = 2
mouse_filter = 0
script = ExtResource( 6 )

[node name="bg" type="ColorRect" parent="toggle"]
margin_left = 63.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 11.0
rect_clip_content = true
mouse_filter = 2

[node name="bg2" type="ColorRect" parent="toggle/bg"]
margin_left = 1.0
margin_top = 1.0
margin_right = 28.0
margin_bottom = 7.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="toggle" type="ColorRect" parent="toggle/bg"]
margin_left = 14.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 6.0
mouse_filter = 2

[node name="title" type="NinePatchRect" parent="."]
show_behind_parent = true
margin_left = 36.0
margin_top = 61.0
margin_right = 446.0
margin_bottom = 75.0
rect_clip_content = true
focus_mode = 1
mouse_filter = 1
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource( 7 )

[node name="rect" type="ColorRect" parent="title"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_right = 410.0
margin_bottom = 14.0
mouse_filter = 2

[node name="text" type="Label" parent="title"]
margin_left = 2.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 28 )
text = "Title text"

[node name="dropdown" type="NinePatchRect" parent="."]
margin_left = 240.0
margin_top = 90.0
margin_right = 442.0
margin_bottom = 102.0
focus_mode = 2
mouse_filter = 1
script = ExtResource( 3 )

[node name="drop" parent="dropdown" instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 41.0
margin_top = -12.0
margin_right = 293.0
margin_bottom = 0.0
texture = null

[node name="text" type="Label" parent="dropdown/drop"]
margin_top = -1.0
margin_right = 40.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 31 )
custom_styles/normal = SubResource( 32 )
text = "text"
valign = 1

[node name="container" type="NinePatchRect" parent="dropdown"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 63.0
margin_right = 206.0
margin_bottom = 48.0
rect_clip_content = true
mouse_filter = 0
texture = ExtResource( 9 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="dropdown/container"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_right = 348.0
margin_bottom = 288.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="dropdown"]
margin_left = 66.0
margin_top = 3.0
margin_right = 106.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 33 )
text = "test"

[node name="padding" type="NinePatchRect" parent="." groups=["padding"]]
show_behind_parent = true
margin_left = 36.0
margin_top = 61.0
margin_right = 76.0
margin_bottom = 101.0

[node name="rect" type="ColorRect" parent="padding"]
visible = false
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_right = 410.0
margin_bottom = 14.0
mouse_filter = 2

[node name="text" type="Label" parent="padding"]
margin_left = 5.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 30 )
text = "Padding"

[connection signal="mouse_entered" from="container/scroll/ColorRect" to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="container/scroll/ColorRect" to="." method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="slider" to="slider" method="_on_slider_mouse_entered"]
[connection signal="mouse_exited" from="slider" to="slider" method="_on_slider_mouse_exited"]
[connection signal="mouse_entered" from="toggle" to="toggle" method="_on_toggle_mouse_entered"]
[connection signal="mouse_exited" from="toggle" to="toggle" method="_on_toggle_mouse_exited"]
[connection signal="mouse_entered" from="title" to="title" method="_on_title_mouse_entered"]
[connection signal="mouse_exited" from="title" to="title" method="_on_title_mouse_exited"]
[connection signal="mouse_entered" from="dropdown" to="dropdown" method="_on_dropdown_mouse_entered"]
[connection signal="mouse_exited" from="dropdown" to="dropdown" method="_on_dropdown_mouse_exited"]
